Custome BaseManager for creating superuser

--- a/user/templates/user/user_registration.html
+++ b/user/templates/user/user_registration.html
@@ -4,8 +4,20 @@
     <h2>User Registration</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Register</button>
+        {% for field in form %}
+            <div class="form-group">
+                <label for="{{ field.id_for_label }}">
+                    {{ field.label }}
+                    {% if field.field.required %}
+                        <span style="color: red;">*</span>
+                    {% endif %}
+                </label>
+                {{ field }}
+                {% if field.errors %}
+                    <div class="error">{{ field.errors }}</div>
+                {% endif %}
+            </div>
+        {% endfor %}
     </form>
     {% if messages %}
         {% for message in messages %}
