Fixing some user/views.py errors and adding new user/templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <header>
         <h2>Header</h2>
         <nav>
-            <a href="{% url 'user_registration' %}">Register</a>
-            <a href="{% url 'user_profile' %}">Profile</a>
+            <a href="{% url 'registration' %}">Register</a>
+            <a href="{% url 'login' %}">Login</a>
         </nav>
 
     </header>
