Fixing errors about name of templates, adding user namespace, adding new tests for views test and service.py test

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <header>
         <h2>Header</h2>
         <nav>
-            <a href="{% url 'registration' %}">Register</a>
-            <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'user:register' %}">Register</a>
+            <a href="{% url 'user:login' %}">Login</a>
         </nav>
 
     </header>
