--- a/user/templates/user/confirm_email.html
+++ b/user/templates/user/confirm_email.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Email Confirmed</h1>
-    <p>Your email address has been successfully confirmed. You can now <a href="{% url 'login' %}">login</a> to your account.</p>
+    <p>Your email address has been successfully confirmed. You can now <a href="{% url 'user:login' %}">login</a> to your account.</p>
 </body>
 </html>
