--- a/user/templates/user/password_change_done.html
+++ b/user/templates/user/password_change_done.html
@@ -5,5 +5,5 @@
 {% block content %}
 <h2>Password Changed Successfully</h2>
 <p>Your password has been changed successfully.</p>
-<a href="{% url 'login' %}">Login again</a>
+<a href="{% url 'user:login' %}">Login again</a>
 {% endblock %}
