--- a/user/templates/user/password_reset_done.html
+++ b/user/templates/user/password_reset_done.html
@@ -5,5 +5,5 @@
 {% block content %}
 <h2>Password Reset Email Sent</h2>
 <p>If an account with the email you entered exists, you will receive a password reset email shortly.</p>
-<a href="{% url 'login' %}">Login</a>
+<a href="{% url 'user:login' %}">Login</a>
 {% endblock %}
