--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -9,5 +9,5 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
-<p>Don't have an account? <a href="{% url 'registration' %}">Register here</a></p>
+<p>Don't have an account? <a href="{% url 'user:register' %}">Register here</a></p>
 {% endblock %}
