--- a/user/templates/user/logout.html
+++ b/user/templates/user/logout.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <h2>Logout</h2>
-<p>You have been logged out. <a href="{% url 'login' %}">Login again</a></p>
+<p>You have been logged out. <a href="{% url 'user:login' %}">Login again</a></p>
 {% endblock %}
