--- a/user/templates/user/password_reset_complete.html
+++ b/user/templates/user/password_reset_complete.html
@@ -5,5 +5,5 @@
 {% block content %}
 <h2>Password Reset Complete</h2>
 <p>Your password has been reset successfully. You can now log in with your new password.</p>
-<a href="{% url 'login' %}">Login</a>
+<a href="{% url 'user:login' %}">Login</a>
 {% endblock %}
